Upload download at arbitrary level

--- a/css/definition_form.css
+++ b/css/definition_form.css
@@ -43,6 +43,10 @@ div.d_f_d_2 {
     flex:calc(100% - 30px);
 }
 
+button.d_f_d_pt {
+    margin-top: 3px
+}
+
 button.d_f_d_xs {
     padding: .25rem .4rem;
     width:24px;
